# SecuServe-Externl-Module

./: .gitignore  README.md  dev.sh  pyproject.toml
SecuServe-Sensors-Module/: __main__.py  testzig.py
SecuServe-Sensors-Module/pipeline/: MainListener.py  SensorPipeline.py  pipelineStates.py
SecuServe-Sensors-Module/sensors/: SensorBase.py  sensorRegister.py
SecuServe-Sensors-Module/utils/: const.py  socketcomm.py
